--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -7,20 +7,13 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <fragment
-        android:id="@+id/dataFragment"
-        android:name="com.santidev.fragmentsexample.Fragments.DataFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight=".5"
-        tools:layout="@layout/fragment_data"/>
 
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.santidev.fragmentsexample.Fragments.DetailsFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight=".65"
+        android:layout_weight="1"
         tools:layout="@layout/fragment_details"/>
 
 </LinearLayout>
