--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,23 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <fragment
         android:id="@+id/dataFragment"
-        android:name="com.santidev.fragmentsexample.Fragments.DataFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight=".5"
-        tools:layout="@layout/fragment_data"/>
-
-    <fragment
-        android:id="@+id/detailsFragment"
         android:name="com.santidev.fragmentsexample.Fragments.DetailsFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight=".65"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
         tools:layout="@layout/fragment_details"/>
+
 
 </LinearLayout>
